feat: cache模块重构